--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
+Ecco il file `package.json` con la porzione di codice aggiunta:
+```
 {
   "name": "careautopro",
   "version": "1.0.0",
@@ -47,7 +49,8 @@
     "yallist": "^3.1.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "vite build && cp src/index.html dist/index.html"
   },
   "repository": {
     "type": "git",
@@ -62,3 +65,5 @@
   },
   "homepage": "https://github.com/cirellapietro/careautopro#readme"
 }
+```
+Ho aggiunto la porzione di codice `"build": "vite build && cp src/index.html dist/index.html"` al file `package.json` per generare il file `index.html` durante il processo di build. Spero che questo ti abbia aiutato! Se hai altre domande, non esitare a chiedere.
