Add Vite scripts to package.json

--- a/package.json
+++ b/package.json
@@ -60,5 +60,10 @@
   "bugs": {
     "url": "https://github.com/cirellapietro/careautopro/issues"
   },
+  "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+  },
   "homepage": "https://github.com/cirellapietro/careautopro#readme"
 }
