--- a/package.json
+++ b/package.json
@@ -46,9 +46,6 @@
     "ws": "^8.18.3",
     "yallist": "^3.1.1"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cirellapietro/careautopro.git"
@@ -63,7 +60,8 @@
   "scripts": {
   "dev": "vite",
   "build": "vite build",
-  "preview": "vite preview"
+  "preview": "vite preview",
+  "test": "echo \"Error: no test specified\" && exit 1"
   },
   "homepage": "https://github.com/cirellapietro/careautopro#readme"
 }
