--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "careautopro",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "baseline-browser-mapping": "^2.9.11",
     "browserslist": "^4.28.1",
@@ -46,6 +53,9 @@
     "ws": "^8.18.3",
     "yallist": "^3.1.1"
   },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cirellapietro/careautopro.git"
@@ -53,15 +63,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/cirellapietro/careautopro/issues"
-  },
-  "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "test": "echo \"Error: no test specified\" && exit 1"
   },
   "homepage": "https://github.com/cirellapietro/careautopro#readme"
 }
