--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
-  "buildCommand": "",
-  "outputDirectory": "."
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "devCommand": "npm run dev",
+  "framework": "vite"
 }
