--- a/package.json
+++ b/package.json
@@ -1,31 +1,5 @@
-{
-  "name": "careautopro-pwa",
-  "version": "1.0.0",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "@supabase/auth-ui-react": "^0.4.0",
-    "@supabase/auth-ui-shared": "^0.1.0",
-    "react-router-dom": "^6.20.0",
-    "lucide-react": "^0.309.0",
-    "date-fns": "^2.30.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.0",
-    "vite-plugin-pwa": "^0.17.5",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
-    "workbox-build": "^7.0.0"
-  }
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
 }
