--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@supabase/auth-ui-react": "^0.4.0",
     "@supabase/auth-ui-shared": "^0.1.0",
     "lucide-react": "^0.309.0",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+
+    "@capacitor/core": "^5.7.0",
+    "@capacitor/android": "^5.7.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.7.0",
+
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.4.21",
     "vite-plugin-pwa": "^0.17.5",
