--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,19 +1,17 @@
-name: Android Debug APK Build
+name: Android Build (APK)
 
 on:
   push:
     branches: [ "main" ]
-  workflow_dispatch:
 
 jobs:
   build-android:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 18
@@ -21,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build web app (Vite)
+      - name: Build web
         run: npm run build
 
       - name: Setup Java
@@ -34,17 +32,18 @@ jobs:
         uses: android-actions/setup-android@v3
 
       - name: Add Android platform (if missing)
-        run: npx cap add android || echo "Android already added"
+        run: |
+          if [ ! -d "android" ]; then
+            npx cap add android
+          fi
 
       - name: Sync Capacitor Android
         run: npx cap sync android
 
       - name: Build Debug APK
-        run: |
-          cd android
-          ./gradlew assembleDebug
+        run: cd android && ./gradlew assembleDebug
 
-      - name: Upload APK artifact
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: careautopro-debug-apk
