--- a/package.json
+++ b/package.json
@@ -9,26 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "@supabase/supabase-js": "^2.39.0",
+    "@capacitor/android": "^5.7.8",
+    "@capacitor/core": "^5.7.8",
     "@supabase/auth-ui-react": "^0.4.0",
     "@supabase/auth-ui-shared": "^0.1.0",
-    "lucide-react": "^0.309.0",
+    "@supabase/supabase-js": "^2.39.0",
     "date-fns": "^2.30.0",
-
-    "@capacitor/core": "^5.7.0",
-    "@capacitor/android": "^5.7.0"
+    "lucide-react": "^0.309.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "^5.7.0",
-
+    "@capacitor/cli": "^5.7.8",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.4.21",
-    "vite-plugin-pwa": "^0.17.5",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19"
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.4.21",
+    "vite-plugin-pwa": "^0.17.5"
   }
 }
