--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,41 +1,26 @@
 name: Build Android APK
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Source
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Build Web Project
-        run: npm run build
-
-      - name: Install Capacitor Android
-        run: |
-          npm install @capacitor/android
-          npx cap add android || true
-
-      - name: Sync Capacitor
-        run: npx cap sync
-
-      - name: Build Android App
+          node-version: 20
+      - run: npm install
+      - run: npm run build
+      - run: npx cap add android || true
+      - run: npx cap sync android
+      - name: Build with Gradle
         run: |
           cd android
           chmod +x gradlew
           ./gradlew assembleDebug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
-          name: CareAutoPro-Debug-APK
+          name: CareAutoPro-APK
           path: android/app/build/outputs/apk/debug/app-debug.apk
