--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,1 +1,8 @@
-{"appId":"com.careautopro.app","appName":"CareAutoPro","webDir":"dist","server":{"androidScheme":"https"}}
+{
+  "appId": "com.careautopro.app",
+  "appName": "CareAutoPro",
+  "webDir": "dist",
+  "server": {
+    "androidScheme": "https"
+  }
+}
